			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04x: *********************************

BUG: (9/6/06, DN) Force quit and save does not save export name change (Bug #1175).
FIX: In FileMenu.forceSave show message box with name of directory where libraries are saved.

BUG: (9/6/06, DN) New Display algorithm not good with old layout technologies (Bug #1213).
FIX: In classes from technology.technologies make factory layer colors match factory transparent layer definition.

BUG: (9/4/06, SMR) Component menu doesn't show text.
FIX: In PixelDrawing.drawNode(), always draw text if "forceVisible" is true.

BUG: (9/4/06, DN) Text is invisible (Bug #1158).
FIX: Add LayerDrawing.canDrawRelativeText threshold to smarter reject small text.

IMP: (8/31/06, SMR) Attributes dialog no longer shows "ATTR_" prefix.

IMP/MAN: (8/31/06, GVG) Refactoring of DRC decks. Old MOSRules decomissioned and TSMCRules class became
the global under the name XMLRules. 180nm primitives are consistent resized according to rules
provided. Similar work is being done for 90nm primitives.
Surround distances are taken from decks, not from the Java code. Rules such as CUTSPA, CUTSPA2D
and CUTSUR were eliminated. DesignRules dialog was modified and only 1 value is required (instead of
unconnected/connected values).

IMP: (8/31/06, RK) PIE: runs on LoCo memory. The results are promising.

IMP: (8/30/06, SMR) Changed "Edit / Erase / Geometry" to "Edit / Erase / Selected"

FIX: (8/30/06, RK) Remove references to PIE in non-plugin code base.

FIX: (8/30/06, RK) Restore the NCC GUI User's manual. Somewhere along the way it disappeared!

IMP: (8/30/06, Tarik) First version of the new graph view based on prefuse.

IMP: (8/30/06, SMR) Moved "CVS" menu from "Tools" to "File".

IMP: (8/29/06, SAF) PIE: InterchangeParts are now properly retrieved as neighbors of 